[gd_scene load_steps=7 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/icons/icon_tool.svg" type="Texture" id=2]
[ext_resource path="res://assets/icons/icon_module.svg" type="Texture" id=3]
[ext_resource path="res://components/help_attribute/help_attribute.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_color = Color( 0.113725, 0.141176, 0.219608, 1 )

[sub_resource type="StyleBoxLine" id=2]
color = Color( 0.0901961, 0.113725, 0.176471, 1 )

[node name="HelpAttribute" type="PanelContainer"]
anchor_right = 1.0
margin_bottom = 187.0
mouse_filter = 2
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="V" type="VBoxContainer" parent="."]
margin_right = 700.0
margin_bottom = 195.0
mouse_filter = 2
custom_constants/separation = 0

[node name="Name" type="MarginContainer" parent="V"]
margin_right = 700.0
margin_bottom = 45.0
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Label" type="Label" parent="V/Name"]
modulate = Color( 1, 0.0862745, 0.564706, 1 )
margin_left = 8.0
margin_top = 8.0
margin_right = 692.0
margin_bottom = 37.0
size_flags_horizontal = 3
text = "ATTRIBUTE"
uppercase = true

[node name="Line" type="HSeparator" parent="V"]
margin_top = 45.0
margin_right = 700.0
margin_bottom = 49.0
custom_styles/separator = SubResource( 2 )

[node name="Description" type="MarginContainer" parent="V"]
margin_top = 49.0
margin_right = 700.0
margin_bottom = 94.0
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Label" type="Label" parent="V/Description"]
modulate = Color( 0.952941, 0.752941, 0.368627, 1 )
margin_left = 8.0
margin_top = 8.0
margin_right = 692.0
margin_bottom = 37.0
text = "Description"
autowrap = true

[node name="Line2" type="HSeparator" parent="V"]
margin_top = 94.0
margin_right = 700.0
margin_bottom = 98.0
mouse_filter = 2
custom_styles/separator = SubResource( 2 )

[node name="Row1" type="MarginContainer" parent="V"]
margin_top = 98.0
margin_right = 700.0
margin_bottom = 146.0
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="H" type="HBoxContainer" parent="V/Row1"]
modulate = Color( 0.47451, 0.596078, 0.933333, 1 )
margin_left = 8.0
margin_top = 8.0
margin_right = 692.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 40

[node name="ItemTypes" type="HBoxContainer" parent="V/Row1/H"]
margin_right = 322.0
margin_bottom = 32.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="V/Row1/H/ItemTypes"]
margin_top = 1.0
margin_right = 250.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "T_ITEMS"

[node name="Tool" type="TextureRect" parent="V/Row1/H/ItemTypes"]
margin_left = 254.0
margin_right = 286.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 2 )
expand = true

[node name="Module" type="TextureRect" parent="V/Row1/H/ItemTypes"]
margin_left = 290.0
margin_right = 322.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 3 )
expand = true

[node name="RollValue" type="HBoxContainer" parent="V/Row1/H"]
margin_left = 362.0
margin_right = 684.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="V/Row1/H/RollValue"]
margin_top = 1.0
margin_right = 263.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "T_ROLL_VALUE"

[node name="Symbol" type="Label" parent="V/Row1/H/RollValue"]
margin_left = 267.0
margin_top = 1.0
margin_right = 267.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="V/Row1/H/RollValue"]
margin_left = 271.0
margin_top = 1.0
margin_right = 322.0
margin_bottom = 30.0
text = "50%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line3" type="HSeparator" parent="V"]
margin_top = 146.0
margin_right = 700.0
margin_bottom = 150.0
custom_styles/separator = SubResource( 2 )

[node name="Row2" type="MarginContainer" parent="V"]
margin_top = 150.0
margin_right = 700.0
margin_bottom = 195.0
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="H" type="HBoxContainer" parent="V/Row2"]
modulate = Color( 0.47451, 0.596078, 0.933333, 1 )
margin_left = 8.0
margin_top = 8.0
margin_right = 692.0
margin_bottom = 37.0
custom_constants/separation = 40

[node name="AugmentStep" type="HBoxContainer" parent="V/Row2/H"]
margin_right = 322.0
margin_bottom = 29.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="V/Row2/H/AugmentStep"]
margin_right = 306.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "T_AUGMENT_STEP"

[node name="Value" type="Label" parent="V/Row2/H/AugmentStep"]
margin_left = 310.0
margin_right = 322.0
margin_bottom = 29.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AugmentCap" type="HBoxContainer" parent="V/Row2/H"]
margin_left = 362.0
margin_right = 684.0
margin_bottom = 29.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="V/Row2/H/AugmentCap"]
margin_right = 304.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "T_AUGMENT_CAP"

[node name="Value" type="Label" parent="V/Row2/H/AugmentCap"]
margin_left = 308.0
margin_right = 322.0
margin_bottom = 29.0
text = "â€“"
__meta__ = {
"_edit_use_anchors_": false
}
